--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <title>Ejercicio de Introducción a HTML en OpenBootcamp</title>
 </head>
 <body>
-    !<--Este es mi primer comentario de dos líneas
+    <!--Este es mi primer comentario de dos líneas
     Aprendiendo a documentar mi código con OpenBootcamp-->
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=0ewV3Gks1q4">
+                El Podcast de OpenBootcamp: Juanjo, profesor de OpenBootcamp (parte 1).
+            </a>
+        </li>
+        <li>
+            <a href="https://youtu.be/3gxxW5NqICc">
+                ILLENIUM & Teddy Swims - All That Really Matters (Official Music Video)
+            </a>
+        </li>
+        <li>
+            <a href="https://youtu.be/YCF28_UncrY?list=LL">
+                💊5 MANDAMIENTOS Para Un Hombre DESGRACIADO [2º Parte] - El juego del calamar🐙
+            </a>
+        </li>
     </ul>
     
 </body>
