--- a/borrador.html
+++ b/borrador.html
@@ -58,5 +58,20 @@
             <td>Descanso</td>
         </tr>
     </table>
+    <br>
+    <h3>Imágenes</h3>
+    <img src="image/image1.jpg" alt="imagen de prueba" width="400" height="200"/>
+    <h3>Video</h3>
+    <video controls>
+        <source src="image/Motivación.mp4" type="video/mp4"/>
+    </video>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/x3z_RZ32UFY" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+            picture-in-picture" allowfullscreen></iframe>
+    <h3>Audio</h3>
+    <audio controls>
+        <source src="your%20eyes%20tell.mp3" type="audio/mp3">
+    </audio>
 </body>
 </html>
