--- a/borrador.html
+++ b/borrador.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Formularios</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <form action="resultados.html" method="get">
@@ -73,5 +74,11 @@
     <audio controls>
         <source src="your%20eyes%20tell.mp3" type="audio/mp3">
     </audio>
+    <h2>Selectores</h2>
+    <p>Un párrafo</p>
+    <h3 class="encabezado">Sección de noticias</h3>
+    <p id="primera-noticia">Primera noticia</p>
+    <p id="segunda-noticia">segunda noticia</p>
+    <span id="primera-noticia">primera noticia que no debe tener estilos</span>
 </body>
 </html>
