borrador modificado y ejercicio5 añadidio

--- a/borrador.html
+++ b/borrador.html
@@ -80,5 +80,73 @@
     <p id="primera-noticia">Primera noticia</p>
     <p id="segunda-noticia">segunda noticia</p>
     <span id="primera-noticia">primera noticia que no debe tener estilos</span>
+    <br/>
+    <div class="div-1">Esto es un div</div>
+    <span class="span-1">Esto es un span</span>
+    <img src="image/image1.jpg" width="200" height="100">
+    <span class="span-2">Esto es un span</span>
+    <div class="div-2">Esto es un div</div>
+    <br/>
+    <div class="flex">
+        <div class="contenido-1">
+            <p>Este es el contenido 1</p>
+            <p>Este es el contenido 1</p>
+            <p>Este es el contenido 1</p>
+        </div>
+        <div class="contenido-2">
+            <p>Este es el contenido 2</p>
+        </div>
+        <div class="contenido-3">
+            <p>Este es el contenido 3</p>
+        </div>
+    </div>
+    <h3>Posicionamiento en CSS</h3>
+    <!-- <li>static</li>
+    <li>relative</li>
+    <li>fixed</li>
+    <li>absolute</li>
+    <li>sticky</li> -->
+    <div class="static">Soy un div estático (static)</div>
+    <div class="relative">Soy un div Relativo (relative)</div>
+    <div class="fixed">Soy un div Fixed (fixed)</div>
+    <div class="sticky">Soy un div Sticky (sticky)</div>
+    <div class="relative contenedor">
+        <div class="absolute">Soy un div Absoluto (absolute)</div>
+    </div>
+    <br>
+    <br>
+    <div class="contenedor-hidden">
+        <p>Do aute laborum voluptate elit sunt ullamco ipsum. Mollit eu ea eiusmod sit sint et esse ad pariatur cupidatat magna irure magna nisi. Culpa ea ex est irure dolor sint ut commodo magna ea est cillum. Adipisicing sit elit nisi commodo ipsum enim nisi.</p>
+    </div>
+    <div class="contenedor-scroll">
+        <p>Do aute laborum voluptate elit sunt ullamco ipsum. Mollit eu ea eiusmod sit sint et esse ad pariatur cupidatat magna irure magna nisi. Culpa ea ex est irure dolor sint ut commodo magna ea est cillum. Adipisicing sit elit nisi commodo ipsum enim nisi.</p>
+    </div>
+    <div class="contenedor-visible">
+        <p>Do aute laborum voluptate elit sunt ullamco ipsum. Mollit eu ea eiusmod sit sint et esse ad pariatur cupidatat magna irure magna nisi. Culpa ea ex est irure dolor sint ut commodo magna ea est cillum. Adipisicing sit elit nisi commodo ipsum enim nisi.</p>
+    </div>
+
+    <div class="contenedor-auto">
+        <p>Do aute laborum voluptate elit sunt ullamco ipsum. Mollit eu ea eiusmod sit sint et esse ad pariatur cupidatat magna irure magna nisi. Culpa ea ex est irure dolor sint ut commodo magna ea est cillum. Adipisicing sit elit nisi commodo ipsum enim nisi.</p>
+    </div>
+
+    <div class="contenedor-scroll-x">
+        <p>Do aute laborum voluptate elit sunt ullamco ipsum. Mollit eu ea eiusmod sit sint et esse ad pariatur cupidatat magna irure magna nisi. Culpa ea ex est irure dolor sint ut commodo magna ea est cillum. Adipisicing sit elit nisi commodo ipsum enim nisi.</p>
+    </div>
+    <br>
+    <img class="imgfriends" src="image/Resultado%201.jpg" alt="picture with friends"/>
+    <div class="galeria">
+        <img class="imagen-galeria" src="image/image3.jpg" alt="">
+        <img class="imagen-galeria" src="image/image4.jpg" alt="">
+        <img class="imagen-galeria" src="image/image5.jpg" alt="">
+        <img class="imagen-galeria" src="image/image6.jpg" alt="">
+        <img class="imagen-galeria" src="image/image7.jpg" alt="">
+    </div>
+    <div class="fondocontexto">
+        <video class="video" playsinline autoplay muted loop>
+            <source src="image/video.mp4" type="video/mp4">
+        </video>
+        <h1 id="titulo-fondo">Vamos mrd que se puede!</h1>
+    </div>
+
 </body>
 </html>
