--- a/borrador.html
+++ b/borrador.html
@@ -147,6 +147,57 @@
         </video>
         <h1 id="titulo-fondo">Vamos mrd que se puede!</h1>
     </div>
-
+    <br/>
+    <section class="main">
+        <div class="contenedor">
+            <p>Esto es un párrafo</p>
+            <p>Esto es un párrafo</p>
+            <p>Esto es un párrafo</p>
+            <p>Esto es un párrafo</p>
+            <button id="boton-contenedor">Botón</button>
+        </div>
+    </section>
+    <p>Esto es un párrafo fuera del div</p>
+    <br/>
+    <!--PseudoClases-->
+    <div class="hover">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aut, cupiditate dolore est illo itaque modi
+            possimus quaerat quo reiciendis veniam vero voluptas voluptates! Ipsum itaque optio perferendis quo
+            repellendus?
+        </p>
+    </div>
+    <div class="listado">
+        <p>Párrafo 1</p>
+        <p>Párrafo 2</p>
+        <p>Párrafo 3</p>
+    </div>
+    <div class="enlaces">
+        <a href="https://google.com" target="_blank">Google</a>
+        <a href="https://open-bootcamp.com" target="_blank">OpenBootcamp</a>
+    </div>
+    <!--PseduElementos-->
+    <div class="contenedor2">
+        <p><span class="frase">En medio de la dificultad reside la oportunidad</span>
+            - Albert Einstein
+        </p>
+    </div>
+    <div class="libro">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet asperiores ea earum in incidunt,
+            laudantium nihil odit tenetur. Beatae blanditiis dolores eum eveniet excepturi numquam, quidem sed veniam
+            veritatis?
+        </p>
+    </div>
+    <div class="listado2">
+        <ul>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+        </ul>
+        <ol>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+        </ol>
+    </div>
 </body>
 </html>
