--- a/ejercicio7.html
+++ b/ejercicio7.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Selectores, pseudo-clases y pseudo-elementos en CSS</title>
+    <link rel="stylesheet" href="css/ejercicio7.css">
 </head>
 <body>
-$END$
+    <div>
+        <button class="boton"><span class="puntofinal">.</span></button>
+    </div>
 </body>
 </html>
