--- a/borrador.html
+++ b/borrador.html
@@ -199,5 +199,17 @@
             <li>Elemento 3</li>
         </ol>
     </div>
+    <div>
+        <div class="padre">
+            <div class="hijo"></div>
+        </div>
+    </div>
+    <br>
+    <div class="div-tooltip">
+        <button class="btn-tooltip">Buscar
+            <span class="tooltip">Hace una búsqueda</span>
+        </button>
+        <div class="triangulo"></div>
+    </div>
 </body>
 </html>
