--- a/borrador.html
+++ b/borrador.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Formularios</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -211,5 +212,30 @@
         </button>
         <div class="triangulo"></div>
     </div>
+    <br>
+    <h1>Unidades fijas y relativas</h1>
+    <div class="escenario-1 escenario">
+        <div class="px">200px</div>
+        <div class="porcentaje">50%</div>
+        <div class="view">50vw</div>
+    </div>
+    <div class="escenario-2 escenario">
+        <div class="px">200px</div>
+        <div class="porcentaje">50%</div>
+        <div class="view">50vw</div>
+    </div>
+    <h1>Unidades EM y REM</h1>
+    <div class="escenario-3 escenario.1">
+        <div class="em">2em</div>
+        <div class="rem">2rem</div>
+    </div>
+    <div class="escenario-4 escenario_v2">
+        <div class="em">2em</div>
+        <div class="rem">2rem</div>
+    </div>
+    <br>
+    <h1>Media queries</h1>
+    <h2>Título</h2>
+    <p>Este es un párrafo</p>
 </body>
 </html>
