--- a/Bootstrap/ejercicio12.html
+++ b/Bootstrap/ejercicio12.html
@@ -12,12 +12,12 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col">elemento 1</div>
-        <div class="col-sm">elemento 2</div>
-        <div class="col-md">elemento 3</div>
-        <div class="col-lg">elemento 4</div>
-        <div class="col-xl">elemento 5</div>
-        <div class="col-xl">elemento 6</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">elemento 1</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">elemento 2</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">elemento 3</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">elemento 4</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">elemento 5</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">elemento 6</div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
