--- a/Formulario/login.html
+++ b/Formulario/login.html
@@ -16,7 +16,10 @@
                 <span>Registrate con Google</span>
             </button>
             <button class="twitter-btn">
-                <picture>T</picture>
+                <picture>
+                    <img src="	https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c53e.png" alt="logo twitter">
+                </picture>
+                <span>Registrate con twitter</span>
             </button>
         </div>
         <div class="separator">
