--- a/Proyecto-Final/html/proyecto.html
+++ b/Proyecto-Final/html/proyecto.html
@@ -4,23 +4,226 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- bootstrap -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../sass/index.scss">
+    <!-- sass -->
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>Proyecto Final</title>
   </head>
   <body>
-    <div class="container">
-        <button class="btn-main">Get started</button>
-    </div>
+    <nav class="nav">
+      <div class="logo">
+        <a href="#">
+          <img src="../assets/img/logo.svg" alt="logo" />
+        </a>
+      </div>
+      <div class="menu d-none d-lg-block">
+        <ul class="main-menu">
+          <li><a href="#">items</a></li>
+          <li><a href="#">items</a></li>
+          <li><a href="#">items</a></li>
+          <li><a href="#">items</a></li>
+          <li><a href="#">items</a></li>
+          <li><a href="#">items</a></li>
+        </ul>
+      </div>
+      <div class="get-started">
+        <button class="btn-sec-s">Sign in</button>
+        <button class="btn-main-s">Get started</button>
+      </div>
+    </nav>
+    <section class="sec-home">
+      <div class="home-cta">
+        <div class="cta-text">
+          <span><i class="bi bi-coin"></i> Jump start your portfolio</span>
+          <i class="bi bi-arrow-right-short"></i>
+        </div>
+        <h2 class="home-title h1">Lorem ipsum dolor sit amet</h2>
+        <p class="home-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sapiente
+          rem sunt veniam odio odit Lorem ipsum dolor sit.
+        </p>
+        <div class="lead-magnet row align-items-center">
+          <div class="col">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Email address"
+            />
+          </div>
+          <div class="col">
+            <button class="btn-main">Get started</button>
+          </div>
+        </div>
+      </div>
+      <div class="home-img d-none d-md-block">
+        <img src="../assets/img/Home-img.webp" alt="Img-main" />
+      </div>
+    </section>
+    <section class="sec-features">
+      <div class="intro">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          perspiciatis eaque ea? At, vel architecto.
+        </p>
+      </div>
+      <div class="features">
+        <div class="text">
+          <div class="feature">
+            <span class="icon-sm">
+              <i class="bi bi-graph-up"></i>
+            </span>
+            <div class="description">
+              <h4 class="title">Lorem, ipsum dolor.</h4>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+                ab.
+              </p>
+            </div>
+          </div>
+          <div class="feature">
+            <span class="icon-sm">
+              <i class="bi bi-calendar"></i>
+            </span>
+            <div class="description">
+              <h4 class="title">Lorem, ipsum dolor.</h4>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+                ab.
+              </p>
+            </div>
+          </div>
+          <div class="feature">
+            <span class="icon-sm">
+              <i class="bi bi-phone"></i>
+            </span>
+            <div class="description">
+              <h4 class="title">Lorem, ipsum dolor.</h4>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+                ab.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="image d-none d-md-block">
+          <img src="../assets/img/chart.webp" alt="Chart" />
+        </div>
+      </div>
+    </section>
+    <section class="sec-benefits">
+      <div class="intro">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          perspiciatis eaque ea? At, vel architecto.
+        </p>
+      </div>
+      <div class="benefit-cards row justify-content-center">
+        <div class="benefit col-md">
+          <i class="bi bi-eye-fill"></i>
+          <div class="description">
+            <h4 class="title">Lorem, ipsum.</h4>
+            <p class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In iste
+              amet fugiat excepturi!
+            </p>
+          </div>
+          <p class="cta">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit cum
+            nobis rem odit commodi? Enim.
+          </p>
+        </div>
+        <div class="benefit col-md">
+          <i class="bi bi-envelope-fill"></i>
+          <div class="description">
+            <h4 class="title">Lorem, ipsum.</h4>
+            <p class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In iste
+              amet fugiat excepturi!
+            </p>
+          </div>
+          <p class="cta">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit cum
+            nobis rem odit commodi? Enim.
+          </p>
+        </div>
+        <div class="benefit col-md">
+          <i class="bi bi-shield-shaded"></i>
+          <div class="description">
+            <h4 class="title">Lorem, ipsum.</h4>
+            <p class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In iste
+              amet fugiat excepturi!
+            </p>
+          </div>
+          <p class="cta">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit cum
+            nobis rem odit commodi? Enim.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="sec-kpis row">
+      <div class="kpi col-md">
+        <span class="number">$547B</span>
+        <span class="desk">Lorem, ipsum dolor.</span>
+      </div>
+      <div class="kpi col-md">
+        <span class="number">$547B</span>
+        <span class="desk">Lorem, ipsum dolor.</span>
+      </div>
+      <div class="kpi col-md">
+        <span class="number">$547B</span>
+        <span class="desk">Lorem, ipsum dolor.</span>
+      </div>
+    </section>
+    <section class="sec-onboarding">
+      <div class="intro">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          perspiciatis eaque ea? At, vel architecto.
+        </p>
+      </div>
+      <div class="steps">
+        <div class="icondesk">
+          <i class="bi bi-person-plus-fill"></i>
+          <h4 class="title">
+            Create an account
+          </h4>
+        </div>
+        <div class="step-separator"></div>
+        <div class="icondesk">
+          <i class="bi bi-bank"></i>
+          <h4 class="title">
+            Link your bank account
+          </h4>
+        </div>
+        <div class="step-separator"></div>
+        <div class="icondesk">
+          <i class="bi bi-coin"></i>
+          <h4 class="title">
+            Purchase some coin
+          </h4>
+        </div>
+      </div>
+      <section class="sec-footer-cta">
+        <div class="footer-cta">
+          <h2 class="cta-tittle">Lorem ipsum dolor sit amet.</h2>
+          <p class="cta-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, beatae.</p>
+        </div>
+        <button class="btn-main">Start earning</button>
+      </section>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
   </body>
